# creative-pipeline

./: .gitignore  main.py  pyproject.toml  test_pyright.py
prompts/: prompt.jinja2
scratch/: check_cuda.py  diag_mem.py  gen_device_map.py
src/: evaluate.py  gen-image.py  utils.py
src/creagen/: __init__.py  generate.py  utils.py
src/creagen/genai/: prompter.py
src/creagen/yutori/: main.py
src/hf/: convert_to_gemma.py  cpuinfer.py  gemma.py  prepare_model.py  prepare_model_v2.py
src/hf/gemma-4b-4bit/: config.json  tokenizer_config.json
src/hf/gemma-4b-pruned-sharded/: config.json  generation_config.json  model.safetensors.index.json
src/proxy/: portkey.py
src/trans/: rembg.py
