[project]
name            = "creative-pipeline"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
requires-python = ">=3.14"
dependencies    = [
    "djlint>=1.36.4",
    "dotenv>=0.9.9",
    "icecream>=2.1.10",
    "isort>=8.0.1",
    "jinja2>=3.1.6",
    "langgraph-cli[inmem]>=0.4.17",
    "langsmith>=0.7.17",
    "pillow>=12.1.1",
    "rembg[gpu]>=2.0.72",
    "rich>=14.3.3",
    "together",
    "transformers>=5.3.0",
    "typing>=3.10.0.0",
]
