[project]
name            = "creagen"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
authors         = [{name = "jgeofil", email = "jeremy.geo@gmail.com"}]
requires-python = ">=3.14"
dependencies    = [
    "pillow>=12.2.0",
    "together>=2.5.0",
    "jinja2>=3.1.6",
    "rich>=14.2.0",
    "dotenv>=0.9.9",
    "requests>=2.33.0",
]

[build-system]
requires      = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
